# OPENBCICOMMUNICATION

./: .gitignore  README.md  README_ROS2.md  bci_to_robot.py  openbci_ml_pipeline.py  robot_driver.py  robot_driver_ros2.py  ssvep_interpreter.py  stream_openbci.py
config/: __init__.py  pipeline_config.py  ssvep_config.py
cyton_emg_ros/: package.xml  setup.cfg  setup.py
cyton_emg_ros/cyton_emg_ros/: __init__.py  cyton_emg_publisher.py  demo_emg_pattern.py  emg_commands_receiver.py  emg_demo_cycle.py
cyton_emg_ros/launch/: cyton_emg.launch.py  demo_gesture.launch.py  emg_and_gesture.launch.py
docs/: CONNECTING_OPENBCI_TO_ML.md  CONNECT_OPENBCI_SIMPLE.md  GITHUB_SETUP.md  NEXT_STEPS.md  ON_THE_RASPBERRY_PI.md  OUTPUT_AND_INTERPRETATION.md  PROJECT_LAYOUT.md  RASPBERRY_PI_LAYOUT.md  STEP_BY_STEP_GUIDE.md
gesture_interpreter/: README.md  __init__.py  gesture_commands.py  gesture_config.py  interpreter.py  package.xml  setup.cfg  setup.py
gesture_interpreter/sim/: __init__.py  gesture_interpreter_sim.py
gesture_interpreter_ros/: package.xml  setup.cfg  setup.py
gesture_interpreter_ros/gesture_interpreter_ros/: __init__.py  gesture_node.py  motion_command_bridge.py
gesture_interpreter_ros/launch/: gesture_interpreter.launch.py
ssvep_interpreter/: __init__.py  interpreter.py
