<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyton_emg_ros</name>
  <version>0.1.0</version>
  <description>OpenBCI Cyton (BrainFlow) → /emg_commands (std_msgs/Int32MultiArray) for gesture_interpreter_ros.</description>
  <maintainer email="lab@example.com">Hadimani Lab</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- For emg_and_gesture.launch.py -->
  <exec_depend>gesture_interpreter_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
