<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_interpreter_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 node: /emg_commands (Int32MultiArray) to /robot_commands (String), deadman gating, Kinova-ready.</description>
  <maintainer email="lab@example.com">Hadimani Lab</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>gesture_interpreter</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
